--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,34 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    tools:context=".MainActivity">
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.android.scorekeeper.MainActivity">
 
-    <RelativeLayout
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/pitch" />
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/pitch" />
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="50dp"
+            android:background="#A6263238"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="50dp"
-                android:background="#A6263238">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -65,8 +62,7 @@
                         android:layout_gravity="center_horizontal"
                         android:onClick="addForTeamA"
                         android:text="Goal!"
-                        android:textColor="#FFFFFF"
-                        android:visibility="visible" />
+                        android:textColor="#FFFFFF" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -76,7 +72,7 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="right">
+                            android:gravity="end">
 
                             <ImageButton
                                 android:layout_width="40dp"
@@ -109,7 +105,7 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="right">
+                            android:gravity="end">
 
                             <ImageButton
                                 android:layout_width="40dp"
@@ -142,7 +138,7 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="right">
+                            android:gravity="end">
 
                             <Button
                                 android:layout_width="wrap_content"
@@ -179,25 +175,15 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="1dp"
-                        android:layout_height="70sp"
+                        android:layout_height="120sp"
                         android:layout_gravity="center"
                         android:layout_margin="4dp"
                         android:background="#FFFFFF" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_margin="4dp"
-                        android:text="vs"
-                        android:textAlignment="center"
-                        android:textColor="#FFFFFF"
-                        android:textSize="34sp" />
 
                     <ImageView
                         android:layout_width="50dp"
@@ -228,7 +214,7 @@
                         android:text="Team B"
                         android:textAlignment="center"
                         android:textColor="#FFFFFF"
-                        android:textSize="34dp" />
+                        android:textSize="34sp" />
 
                     <TextView
                         android:id="@+id/team_b_score"
@@ -259,7 +245,7 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="left">
+                            android:gravity="start">
 
                             <TextView
                                 android:id="@+id/team_b_yellow"
@@ -292,7 +278,7 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="left">
+                            android:gravity="start">
 
                             <TextView
                                 android:id="@+id/team_b_red"
@@ -325,7 +311,7 @@
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:gravity="left">
+                            android:gravity="start">
 
                             <Button
                                 android:layout_width="wrap_content"
@@ -353,27 +339,25 @@
                                 android:textColor="#FFFFFF"
                                 android:textSize="34sp" />
 
-
-
                         </RelativeLayout>
 
                     </LinearLayout>
 
                 </LinearLayout>
+
             </LinearLayout>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:onClick="resetScore"
+                android:padding="20dp"
+                android:text="Reset"
+                android:textColor="#FFFFFF" />
 
         </LinearLayout>
 
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:padding="20dp"
-            android:onClick="resetScore"
-            android:text="Reset"
-            android:textColor="#FFFFFF" />
+    </ScrollView>
 
-    </RelativeLayout>
-
-</ScrollView>
+</RelativeLayout>
